rely on network-simple-ws

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-cabal-dev/
-dist/
-*.log
+dist-newstyle*
+.*.sw[a-p]
 *~
-\#*\#
-*.swp
-*.swo
-*.swn
-*.o
-*.hi
-TAGS
-.cabal-sandbox/
-cabal.sandbox.config
+.ghc.environment.*
+cabal*.project.local
+result
+*.lock
+dist
+certs/
