--- a/network-simple-wss.cabal
+++ b/network-simple-wss.cabal
@@ -1,18 +1,18 @@
-name:                network-simple-wss
-version:             0.1
-synopsis:            Simple interface to TLS secured WebSockets.
-description:         Simple interface to TLS secured WebSockets.
-homepage:            https://github.com/k0001/network-simple-wss
-bug-reports:         https://github.com/k0001/network-simple-wss/issues
-license:             BSD3
-license-file:        LICENSE
-author:              Renzo Carbonara
-maintainer:          renλren.zone
-copyright:           Copyright (c) Renzo Carbonara 2018
-category:            Network
-build-type:          Simple
-cabal-version:       >=1.8
-extra-source-files:  README.md changelog.md
+name: network-simple-wss
+version: 0.1
+synopsis: Simple interface to TLS secured WebSockets.
+description: Simple interface to TLS secured WebSockets.
+homepage: https://github.com/k0001/network-simple-wss
+bug-reports: https://github.com/k0001/network-simple-wss/issues
+license: BSD3
+license-file: LICENSE
+author: Renzo Carbonara
+maintainer: renλren.zone
+copyright: Copyright (c) Renzo Carbonara 2018
+category: Network
+build-type: Simple
+cabal-version: >=1.8
+extra-source-files: README.md changelog.md
 
 source-repository head
     type: git
@@ -21,11 +21,12 @@ source-repository head
 library
   hs-source-dirs: src
   exposed-modules: Network.Simple.WSS
+  ghc-options: -Wall -O2
   build-depends:
     base >=4.7 && <5.0,
     bytestring,
     safe-exceptions,
-    network-simple-tls >=0.3,
+    network-simple-tls >=0.3.2,
+    network-simple-ws,
     websockets
-  ghc-options: -Wall -O2
 
