--- a/network-simple-wss.cabal
+++ b/network-simple-wss.cabal
@@ -26,7 +26,7 @@ library
     base >=4.7 && <5.0,
     bytestring,
     safe-exceptions,
-    network-simple-tls >=0.3.2,
+    network-simple-tls >= 0.3.2 && < 0.4,
     network-simple-ws,
-    websockets
+    websockets < 0.12.6
 
